--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2023-03-01 10:30:25.895677 </em></p>
+                <p><em> 2023-03-01 10:45:27.379089 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -51,6 +51,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>HPB</td>
+      <td>HPB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
+      <td>2023-03-01</td>
+      <td>2023-03-14</td>
+      <td>1000.0</td>
+      <td>0.0</td>
+      <td>2023-03-13</td>
+      <td>12 days</td>
+      <td>19500.0</td>
+      <td>19.5</td>
+      <td>5128.21</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=HPB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/HPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>MRF</td>
       <td>MRF - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-28</td>
@@ -60,14 +77,14 @@
       <td>2023-03-22</td>
       <td>21 days</td>
       <td>44000.0</td>
-      <td>44.00</td>
+      <td>44.0</td>
       <td>2272.73</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=MRF" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/MRF" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>ACE</td>
       <td>ACE - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-28</td>
@@ -77,14 +94,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>36100.0</td>
-      <td>36.10</td>
+      <td>36.1</td>
       <td>2770.08</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ACE" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ACE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>L18</td>
       <td>L18 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2023-02-28</td>
@@ -94,14 +111,14 @@
       <td>2023-03-10</td>
       <td>9 days</td>
       <td>21200.0</td>
-      <td>21.20</td>
+      <td>21.2</td>
       <td>3301.89</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=L18" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/L18" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>ONE</td>
       <td>ONE - Trả cổ tức Cả năm năm 2020 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -111,14 +128,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>5900.0</td>
-      <td>5.90</td>
+      <td>5.9</td>
       <td>8474.58</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ONE" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ONE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>PJC</td>
       <td>PJC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -128,14 +145,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>23000.0</td>
-      <td>25.00</td>
+      <td>25.0</td>
       <td>6000.00</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PJC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PJC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>CCI</td>
       <td>CCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1210 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -145,14 +162,14 @@
       <td>2023-03-23</td>
       <td>22 days</td>
       <td>26600.0</td>
-      <td>28.10</td>
+      <td>28.1</td>
       <td>4306.05</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=CCI" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/CCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>STC</td>
       <td>STC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1400 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -162,14 +179,14 @@
       <td>2023-03-09</td>
       <td>8 days</td>
       <td>19000.0</td>
-      <td>18.00</td>
+      <td>18.0</td>
       <td>7777.78</td>
       <td>-99.91</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=STC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/STC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>SAS</td>
       <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -179,14 +196,14 @@
       <td>2023-03-07</td>
       <td>6 days</td>
       <td>27800.0</td>
-      <td>26.60</td>
+      <td>26.6</td>
       <td>3759.40</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -196,14 +213,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>18500.0</td>
-      <td>17.50</td>
+      <td>17.5</td>
       <td>3428.57</td>
       <td>-99.91</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ADP" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -213,14 +230,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>9500.0</td>
-      <td>10.00</td>
+      <td>10.0</td>
       <td>8500.00</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=EBS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -230,14 +247,14 @@
       <td>2023-03-02</td>
       <td>1 days</td>
       <td>9000.0</td>
-      <td>8.90</td>
+      <td>8.9</td>
       <td>12808.99</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=HMR" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -247,14 +264,14 @@
       <td>2023-03-17</td>
       <td>16 days</td>
       <td>24100.0</td>
-      <td>23.35</td>
-      <td>10706.64</td>
+      <td>23.6</td>
+      <td>10593.22</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=TPB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -264,14 +281,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>35500.0</td>
-      <td>37.00</td>
+      <td>37.0</td>
       <td>4054.05</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=VDP" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -281,8 +298,8 @@
       <td>2023-03-01</td>
       <td>0 days</td>
       <td>177327.0</td>
-      <td>189.40</td>
-      <td>527.98</td>
+      <td>189.8</td>
+      <td>526.87</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
@@ -311,6 +328,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>HPB</td>
+      <td>HPB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
+      <td>2023-03-01</td>
+      <td>2023-03-14</td>
+      <td>1000.0</td>
+      <td>0.0</td>
+      <td>2023-03-13</td>
+      <td>12 days</td>
+      <td>19500.0</td>
+      <td>19.5</td>
+      <td>5128.21</td>
+      <td>-99.90</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=HPB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/HPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>MRF</td>
       <td>MRF - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-28</td>
@@ -320,14 +354,14 @@
       <td>2023-03-22</td>
       <td>21 days</td>
       <td>44000.0</td>
-      <td>44.00</td>
+      <td>44.0</td>
       <td>2272.73</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=MRF" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/MRF" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>ACE</td>
       <td>ACE - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-28</td>
@@ -337,14 +371,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>36100.0</td>
-      <td>36.10</td>
+      <td>36.1</td>
       <td>2770.08</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ACE" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ACE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>L18</td>
       <td>L18 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 700 đồng/cổ phiếu</td>
       <td>2023-02-28</td>
@@ -354,14 +388,14 @@
       <td>2023-03-10</td>
       <td>9 days</td>
       <td>21200.0</td>
-      <td>21.20</td>
+      <td>21.2</td>
       <td>3301.89</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=L18" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/L18" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>ONE</td>
       <td>ONE - Trả cổ tức Cả năm năm 2020 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -371,14 +405,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>5900.0</td>
-      <td>5.90</td>
+      <td>5.9</td>
       <td>8474.58</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ONE" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ONE" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>PJC</td>
       <td>PJC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-27</td>
@@ -388,14 +422,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>23000.0</td>
-      <td>25.00</td>
+      <td>25.0</td>
       <td>6000.00</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PJC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PJC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>CCI</td>
       <td>CCI - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1210 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -405,14 +439,14 @@
       <td>2023-03-23</td>
       <td>22 days</td>
       <td>26600.0</td>
-      <td>28.10</td>
+      <td>28.1</td>
       <td>4306.05</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=CCI" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/CCI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>STC</td>
       <td>STC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1400 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -422,14 +456,14 @@
       <td>2023-03-09</td>
       <td>8 days</td>
       <td>19000.0</td>
-      <td>18.00</td>
+      <td>18.0</td>
       <td>7777.78</td>
       <td>-99.91</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=STC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/STC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>SAS</td>
       <td>SAS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2023-02-23</td>
@@ -439,14 +473,14 @@
       <td>2023-03-07</td>
       <td>6 days</td>
       <td>27800.0</td>
-      <td>26.60</td>
+      <td>26.6</td>
       <td>3759.40</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>ADP</td>
       <td>ADP - Trả cổ tức Đợt 3 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2023-02-22</td>
@@ -456,14 +490,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>18500.0</td>
-      <td>17.50</td>
+      <td>17.5</td>
       <td>3428.57</td>
       <td>-99.91</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=ADP" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/ADP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>EBS</td>
       <td>EBS - Trả cổ tức Đợt 1 năm 2022 bằng tiền 850 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -473,14 +507,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>9500.0</td>
-      <td>10.00</td>
+      <td>10.0</td>
       <td>8500.00</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=EBS" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/EBS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>HMR</td>
       <td>HMR - Trả cổ tức Cả năm năm 2021 bằng tiền 1140 đồng/cổ phiếu</td>
       <td>2023-02-20</td>
@@ -490,14 +524,14 @@
       <td>2023-03-02</td>
       <td>1 days</td>
       <td>9000.0</td>
-      <td>8.90</td>
+      <td>8.9</td>
       <td>12808.99</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=HMR" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/HMR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>TPB</td>
       <td>TPB - Trả cổ tức Cả năm năm 2021 bằng tiền 2500 đồng/cổ phiếu</td>
       <td>2023-02-17</td>
@@ -507,14 +541,14 @@
       <td>2023-03-17</td>
       <td>16 days</td>
       <td>24100.0</td>
-      <td>23.35</td>
-      <td>10706.64</td>
+      <td>23.6</td>
+      <td>10593.22</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=TPB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/TPB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>VDP</td>
       <td>VDP - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2023-02-08</td>
@@ -524,14 +558,14 @@
       <td>2023-03-13</td>
       <td>12 days</td>
       <td>35500.0</td>
-      <td>37.00</td>
+      <td>37.0</td>
       <td>4054.05</td>
       <td>-99.90</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=VDP" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/VDP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -541,8 +575,8 @@
       <td>2023-03-01</td>
       <td>0 days</td>
       <td>177327.0</td>
-      <td>189.40</td>
-      <td>527.98</td>
+      <td>189.8</td>
+      <td>526.87</td>
       <td>-99.89</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
