--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <li><a href="PNL_v2.html">PNL v2</a></li>
         <li><a href="Dividend events.html">Dividend Events</a></li>
         <li><a href="RRG.html">RRG Chart</a></li>
+        <li><a href="Owner_RRG.html">Owner RRG Chart</a></li>
     </ul>
 </nav>
